6-networking/ingress/dep1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dep-1-pod
  template:
    metadata:
      labels:
        app: dep-1-pod
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.1
        ports:
        - containerPort: 80
