6-networking/ingress/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-1
spec:
  type: ClusterIP
  selector:
    app: dep-1-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
